# OctoPrint-API-Notifications

./: README.md  pyproject.toml  setup.py
octoprint_api_notifications/: __init__.py
octoprint_api_notifications/static/js/: ApiNotifications.js
octoprint_notification_api/: __init__.py
octoprint_notification_api/static/js/: NotificationApi.js
